# mmbookmarks

./: CMakeLists.txt  readme.txt
sources/mm/bookmarks/: bookmark.cc  bookmark.hh  bookmarks.hh  comparison.cc  comparison.hh  enums.hh  manager.cc  manager.hh  sql.hh  utilities.cc  utilities.hh  version.hh
